--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="src\entities\Camera.cpp" />
     <ClCompile Include="src\entities\ControllablePlayer.cpp" />
     <ClCompile Include="src\entities\DelfinoPlaza\DP_StageManager.cpp" />
+    <ClCompile Include="src\entities\GreenForest\GF_Particle.cpp" />
     <ClCompile Include="src\entities\Help.cpp" />
     <ClCompile Include="src\entities\ItemCapsule.cpp" />
     <ClCompile Include="src\entities\ManiaMightyModel.cpp" />
@@ -188,6 +189,8 @@
     <ClCompile Include="src\entities\Ring.cpp" />
     <ClCompile Include="src\entities\RingMoving.cpp" />
     <ClCompile Include="src\entities\Rocket.cpp" />
+    <ClCompile Include="src\entities\ShieldGreen.cpp" />
+    <ClCompile Include="src\entities\ShieldMagnet.cpp" />
     <ClCompile Include="src\entities\SkyRail\SR_StageManager.cpp" />
     <ClCompile Include="src\entities\SkySphere.cpp" />
     <ClCompile Include="src\entities\SpeedRamp.cpp" />
@@ -297,6 +300,7 @@
     <ClInclude Include="src\entities\camera.h" />
     <ClInclude Include="src\entities\controllableplayer.h" />
     <ClInclude Include="src\entities\DelfinoPlaza\dpstagemanager.h" />
+    <ClInclude Include="src\entities\GreenForest\gfparticle.h" />
     <ClInclude Include="src\entities\help.h" />
     <ClInclude Include="src\entities\itemcapsule.h" />
     <ClInclude Include="src\entities\maniamightymodel.h" />
@@ -325,6 +329,8 @@
     <ClInclude Include="src\entities\ring.h" />
     <ClInclude Include="src\entities\ringmoving.h" />
     <ClInclude Include="src\entities\rocket.h" />
+    <ClInclude Include="src\entities\shieldgreen.h" />
+    <ClInclude Include="src\entities\shieldmagnet.h" />
     <ClInclude Include="src\entities\SkyRail\srstagemanager.h" />
     <ClInclude Include="src\entities\skysphere.h" />
     <ClInclude Include="src\entities\speedramp.h" />
