Fixed uninitialized problems and warnings

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ NewSonicThing/NewSonicThing.exe
 NewSonicThing/RaceLog.txt
 NewSonicThing/NewSonicThing.pdb
 NewSonicThing/src/SourceCodeCleaner.exe
+NewSonicThing/Settings/ControllerLog.txt
