auto player ghosts and optional particles

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ NewSonicThing/RaceLog.txt
 NewSonicThing/NewSonicThing.pdb
 NewSonicThing/src/SourceCodeCleaner.exe
 NewSonicThing/Settings/ControllerLog.txt
+NewSonicThing/res/SaveData/*
