--- a/NewSonicThing/NewSonicThing.vcxproj.filters
+++ b/NewSonicThing/NewSonicThing.vcxproj.filters
@@ -100,6 +100,9 @@
     <Filter Include="Source Files\entities\Tutorial">
       <UniqueIdentifier>{4c5de964-236c-4857-8963-be35bc59474a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\entities\RadicalHighway">
+      <UniqueIdentifier>{8024aea5-16c9-41e7-b484-56159167d2c7}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\glad.c">
@@ -516,6 +519,9 @@
     <ClCompile Include="src\entities\GreenForest\GF_Particle.cpp">
       <Filter>Source Files\entities\GreenForest</Filter>
     </ClCompile>
+    <ClCompile Include="src\entities\RadicalHighway\RH_StageManager.cpp">
+      <Filter>Source Files\entities\RadicalHighway</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\animation\animation.h">
@@ -916,6 +922,9 @@
     </ClInclude>
     <ClInclude Include="src\entities\GreenForest\gfparticle.h">
       <Filter>Source Files\entities\GreenForest</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\RadicalHighway\rhstagemanager.h">
+      <Filter>Source Files\entities\RadicalHighway</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
