--- a/NewSonicThing/NewSonicThing.vcxproj.filters
+++ b/NewSonicThing/NewSonicThing.vcxproj.filters
@@ -522,6 +522,9 @@
     <ClCompile Include="src\entities\RadicalHighway\RH_StageManager.cpp">
       <Filter>Source Files\entities\RadicalHighway</Filter>
     </ClCompile>
+    <ClCompile Include="src\entities\LostChao.cpp">
+      <Filter>Source Files\entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\animation\animation.h">
@@ -925,6 +928,9 @@
     </ClInclude>
     <ClInclude Include="src\entities\RadicalHighway\rhstagemanager.h">
       <Filter>Source Files\entities\RadicalHighway</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\lostchao.h">
+      <Filter>Source Files\entities</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
