--- a/NewSonicThing/Settings/ControllerConfig.ini
+++ b/NewSonicThing/Settings/ControllerConfig.ini
@@ -8,13 +8,15 @@ Controller_ID 0
 
 #Button Mapping
 
-A     0
-B     1
-X     2
-Y     3
-LB    4
-RB    5
-Start 7
+A      0
+B      1
+X      2
+Y      3
+LB     4
+RB     5
+Start  7
+DpadU 11
+DpadD 13
 
 
 
