Add green hill objects

--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -187,6 +187,15 @@
     <ClCompile Include="src\entities\EmeraldPiece.cpp" />
     <ClCompile Include="src\entities\GreenForest\GF_Particle.cpp" />
     <ClCompile Include="src\entities\GreenForest\GF_Vine.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_FallingPlatform.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_FloatingPlatform.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_Flower.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_Grass.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_Rock.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_Sunflower.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_Totem.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_TotemWings.cpp" />
+    <ClCompile Include="src\entities\GreenHill\GH_Tree.cpp" />
     <ClCompile Include="src\entities\Help.cpp" />
     <ClCompile Include="src\entities\HintMonitor.cpp" />
     <ClCompile Include="src\entities\Hunter.cpp" />
@@ -363,6 +372,15 @@
     <ClInclude Include="src\entities\emeraldpiece.h" />
     <ClInclude Include="src\entities\GreenForest\gfparticle.h" />
     <ClInclude Include="src\entities\GreenForest\gfvine.h" />
+    <ClInclude Include="src\entities\GreenHill\ghfallingplatform.h" />
+    <ClInclude Include="src\entities\GreenHill\ghfloatingplatform.h" />
+    <ClInclude Include="src\entities\GreenHill\ghflower.h" />
+    <ClInclude Include="src\entities\GreenHill\ghgrass.h" />
+    <ClInclude Include="src\entities\GreenHill\ghrock.h" />
+    <ClInclude Include="src\entities\GreenHill\ghsunflower.h" />
+    <ClInclude Include="src\entities\GreenHill\ghtotem.h" />
+    <ClInclude Include="src\entities\GreenHill\ghtotemwings.h" />
+    <ClInclude Include="src\entities\GreenHill\ghtree.h" />
     <ClInclude Include="src\entities\help.h" />
     <ClInclude Include="src\entities\hintmonitor.h" />
     <ClInclude Include="src\entities\hunter.h" />
