--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -174,6 +174,9 @@
     <ClCompile Include="src\entities\Dashpad.cpp" />
     <ClCompile Include="src\entities\Camera.cpp" />
     <ClCompile Include="src\entities\ControllablePlayer.cpp" />
+    <ClCompile Include="src\entities\DelfinoPlaza\DP_BigShine.cpp" />
+    <ClCompile Include="src\entities\DelfinoPlaza\DP_Leaves.cpp" />
+    <ClCompile Include="src\entities\DelfinoPlaza\DP_Palmtree.cpp" />
     <ClCompile Include="src\entities\DelfinoPlaza\DP_StageManager.cpp" />
     <ClCompile Include="src\entities\DragonRoad\DR_StageManager.cpp" />
     <ClCompile Include="src\entities\DryLagoon\DL_BlueBox.cpp" />
@@ -363,6 +366,9 @@
     <ClInclude Include="src\entities\dashpad.h" />
     <ClInclude Include="src\entities\camera.h" />
     <ClInclude Include="src\entities\controllableplayer.h" />
+    <ClInclude Include="src\entities\DelfinoPlaza\dpbigshine.h" />
+    <ClInclude Include="src\entities\DelfinoPlaza\dpleaves.h" />
+    <ClInclude Include="src\entities\DelfinoPlaza\dppalmtree.h" />
     <ClInclude Include="src\entities\DelfinoPlaza\dpstagemanager.h" />
     <ClInclude Include="src\entities\DragonRoad\drstagemanager.h" />
     <ClInclude Include="src\entities\DryLagoon\dlbluebox.h" />
