--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="src\entities\DryLagoon\DL_Turtle.cpp" />
     <ClCompile Include="src\entities\EmeraldManager.cpp" />
     <ClCompile Include="src\entities\EmeraldPiece.cpp" />
+    <ClCompile Include="src\entities\FrogForest\FF_StageManager.cpp" />
     <ClCompile Include="src\entities\GreenForest\GF_Particle.cpp" />
     <ClCompile Include="src\entities\GreenForest\GF_Vine.cpp" />
     <ClCompile Include="src\entities\GreenHill\GH_FallingPlatform.cpp" />
@@ -382,6 +383,7 @@
     <ClInclude Include="src\entities\DryLagoon\dlturtle.h" />
     <ClInclude Include="src\entities\emeraldmanager.h" />
     <ClInclude Include="src\entities\emeraldpiece.h" />
+    <ClInclude Include="src\entities\FrogForest\ffstagemanager.h" />
     <ClInclude Include="src\entities\GreenForest\gfparticle.h" />
     <ClInclude Include="src\entities\GreenForest\gfvine.h" />
     <ClInclude Include="src\entities\GreenHill\ghfallingplatform.h" />
