--- a/NewSonicThing/NewSonicThing.vcxproj.filters
+++ b/NewSonicThing/NewSonicThing.vcxproj.filters
@@ -127,6 +127,9 @@
     <Filter Include="Source Files\entities\NokiBay">
       <UniqueIdentifier>{606aad94-c878-4db9-a2c2-896054275e5e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\entities\FrogForest">
+      <UniqueIdentifier>{0b1888dc-f34b-44e6-bf1d-4ae96b694402}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\glad.c">
@@ -702,6 +705,9 @@
     <ClCompile Include="src\entities\WaterZone.cpp">
       <Filter>Source Files\entities</Filter>
     </ClCompile>
+    <ClCompile Include="src\entities\FrogForest\FF_StageManager.cpp">
+      <Filter>Source Files\entities\FrogForest</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\animation\animation.h">
@@ -1261,6 +1267,9 @@
     </ClInclude>
     <ClInclude Include="src\entities\waterzone.h">
       <Filter>Source Files\entities</Filter>
+    </ClInclude>
+    <ClInclude Include="src\entities\FrogForest\ffstagemanager.h">
+      <Filter>Source Files\entities\FrogForest</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
