Changed controller input to SDL2 for better switch pro controller support.

--- a/NewSonicThing/Settings/ControllerConfig.ini
+++ b/NewSonicThing/Settings/ControllerConfig.ini
@@ -8,25 +8,26 @@ Controller_ID 0
 
 #Button Mapping
 
-A      0
-B      1
-X      2
-Y      3
-LB     4
-RB     5
-Start  7
-DpadU 11
-DpadD 13
+A       0
+B       1
+X       2
+Y       3
+LB      9
+RB     10
+Select  4
+Start   6
+DpadU  11
+DpadD  12
 
 
 
 #Axis Mapping
 
 #Axis_Name  Axis_Number  Deadzone  Scale
-Stick_LX    0            0.06      1.0
-Stick_LY    1            0.06      1.0
-Stick_RX    2            0.075     1.0
-Stick_RY    3            0.06      1.0
+Stick_LX    0            0.06      1.05
+Stick_LY    1            0.06      1.05
+Stick_RX    2            0.5       1.05
+Stick_RY    3            0.06      1.05
 
 #Axis_Name  Axis_Number  Neutral_Value  Max_Value  Deadzone
 Trigger_L   4            -1.0           1.0        0.05
