--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -147,6 +147,7 @@
       <AdditionalDependencies>opengl32.lib;glfw3_mt.lib;SOIL.lib;OpenAL32.lib;libogg_static.lib;libvorbis_static.lib;libvorbisfile_static.lib;SDL2.lib;SDL2main.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalOptions>
       </AdditionalOptions>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
