Cleaned up Settings

--- a/NewSonicThing/Settings/ControllerConfig.ini
+++ b/NewSonicThing/Settings/ControllerConfig.ini
@@ -1,9 +1,8 @@
 #Controller Select
+
 #If you have more than one controller plugged in,
 #change this to select the correct one
-Controller_ID 0
-
-
+Controller_Id 0
 
 
 #Button Mapping
@@ -20,15 +19,14 @@ DpadU  11
 DpadD  12
 
 
-
 #Axis Mapping
 
-#Axis_Name  Axis_Number  Deadzone  Scale
-Stick_LX    0            0.06      1.05
-Stick_LY    1            0.06      1.05
-Stick_RX    2            0.5       1.05
-Stick_RY    3            0.06      1.05
+#Axis_Name  Axis_Id  Deadzone  Scale
+Stick_LX    0        0.1       1.05
+Stick_LY    1        0.1       1.05
+Stick_RX    2        0.1       1.05
+Stick_RY    3        0.1       1.05
 
-#Axis_Name  Axis_Number  Neutral_Value  Max_Value  Deadzone
-Trigger_L   4            -1.0           1.0        0.05
-Trigger_R   5            -1.0           1.0        0.05
+#Axis_Name  Axis_Id  Neutral_Value  Max_Value  Deadzone
+Trigger_L   4        -1.0           1.0        0.05
+Trigger_R   5        -1.0           1.0        0.05
