--- a/NewSonicThing/Settings/GraphicsSettings.ini
+++ b/NewSonicThing/Settings/GraphicsSettings.ini
@@ -2,38 +2,20 @@
 #Should be 'on' or 'off'
 HQ_Water on
 
-#Resolution of the high quality water
-HQ_Water_Reflection_Width 1600
-HQ_Water_Reflection_Height 900
-
-HQ_Water_Refraction_Width 1600
-HQ_Water_Refraction_Height 900
-
-#HQ_Water_Refraction_Width 960
-#HQ_Water_Refraction_Height 540
-
 #Render particles
 Render_Particles on
 
 #Render bloom effect
 Render_Bloom on
 
-#Render shadows
-Render_Shadows_Far off
-Render_Shadows_Close off
-
-#Far Shadow Quality
-#Low = 0   Medium = 1   High = 2
-Shadows_Far_Quality 2
-
 #Number of multisamples to use for anti-aliasing
 Anti-Aliasing_Samples 8
 
 #Vertical Field of View
-FOV 70
+FOV 75
 
 #Unlock_Framerate
 Unlock_Framerate off
 
-#If framerate is unlocked, fps will not exceed this limit
-FPS_Limit 60
+#If framerate is unlocked, fps will not exceed this limit. -1 for no limit.
+FPS_Limit -1
