--- a/NewSonicThing/NewSonicThing.vcxproj
+++ b/NewSonicThing/NewSonicThing.vcxproj
@@ -140,6 +140,7 @@
       <PreprocessorDefinitions>%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <OmitFramePointers>true</OmitFramePointers>
       <EnableFiberSafeOptimizations>true</EnableFiberSafeOptimizations>
+      <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
@@ -294,7 +295,6 @@
     <ClCompile Include="src\guis\GuiShader.cpp" />
     <ClCompile Include="src\guis\GuiTexture.cpp" />
     <ClCompile Include="src\guis\GuiTextureResources.cpp" />
-    <ClCompile Include="src\loading\FakeTexture.cpp" />
     <ClCompile Include="src\loading\LevelLoader.cpp" />
     <ClCompile Include="src\loading\Loader.cpp" />
     <ClCompile Include="src\loading\ModelLoader.cpp" />
@@ -496,7 +496,6 @@
     <ClInclude Include="src\guis\guishader.h" />
     <ClInclude Include="src\guis\guitexture.h" />
     <ClInclude Include="src\guis\guitextureresources.h" />
-    <ClInclude Include="src\loading\fakeTexture.h" />
     <ClInclude Include="src\loading\levelloader.h" />
     <ClInclude Include="src\loading\loader.h" />
     <ClInclude Include="src\loading\modelloader.h" />
