--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ NewSonicThing/NewSonicThing.pdb
 NewSonicThing/src/SourceCodeCleaner.exe
 NewSonicThing/Settings/ControllerLog.txt
 NewSonicThing/res/SaveData/*
+.DS_Store
