QOL changes, changed settings, SOIL2

--- a/NewSonicThing/Settings/AudioSettings.ini
+++ b/NewSonicThing/Settings/AudioSettings.ini
@@ -1,7 +1,7 @@
-#Volume of sound effects
-#Should be 0 for no sfx, 1 for full volume sfx
-SFX_Volume 0.05
+#Volume of sound effects.
+#Should be 0 for no sfx, 100 for full volume sfx.
+SFX_Volume 10
 
-#Volume of music
-#Should be 0 for no music, 1 for full volume music
-Music_Volume 0.05
+#Volume of music.
+#Should be 0 for no music, 100 for full volume music.
+Music_Volume 10
