--- a/NewSonicThing/Settings/DisplaySettings.ini
+++ b/NewSonicThing/Settings/DisplaySettings.ini
@@ -1,14 +1,14 @@
-#Window resolution (when not fullscreen)
-Width 1280
-Height 720
+#Window resolution (when not fullscreen).
+Width 1920
+Height 1080
 
-#Fullscreen
-#Should be 'on' or 'off'
-Fullscreen off
+#Fullscreen.
+#Should be 'on' or 'off'.
+Fullscreen on
 
-#Fullscreen resolution
+#Fullscreen resolution.
 F_Width 1920
 F_Height 1080
 
-#Fullscreen refresh rate 
+#Fullscreen refresh rate.
 F_RefreshRate 60
