--- a/NewSonicThing/Settings/GraphicsSettings.ini
+++ b/NewSonicThing/Settings/GraphicsSettings.ini
@@ -1,21 +1,24 @@
-#High-quality water
-#Should be 'on' or 'off'
-HQ_Water on
+#Reflective water.
+#Should be 'on' or 'off'.
+Reflective_Water on
 
-#Render particles
-Render_Particles on
+#Show particles.
+Show_Particles on
 
-#Render bloom effect
-Render_Bloom on
+#Bloom post processing.
+Bloom on
 
-#Number of multisamples to use for anti-aliasing
+#Shows FPS in the corner of the screen.
+Show_FPS on
+
+#Number of multisamples to use for anti-aliasing.
 Anti-Aliasing_Samples 8
 
-#Vertical Field of View
-FOV 75
+#Vertical Field of View.
+FOV 77
 
-#Unlock_Framerate
-Unlock_Framerate off
+#V-Sync.
+V-Sync on
 
-#If framerate is unlocked, fps will not exceed this limit. -1 for no limit.
-FPS_Limit -1
+#If v-sync is off, fps will not exceed this limit. -1 for no limit.
+FPS_Limit 360
